--- a/templates/admin/users.html
+++ b/templates/admin/users.html
@@ -290,7 +290,7 @@
   </div>
 
   <!-- 引入模态框 -->
-  {% include 'modals/userDetailModal.html' %}
+  {% include 'modals/manageUserModal.html' %}
   <!-- - -->
 {% endblock %}
 
