--- a/templates/modals/addAvatarModal.html
+++ b/templates/modals/addAvatarModal.html
@@ -19,10 +19,7 @@
           <div class="input-group">
             <span id="avatarFileName" class="form-control text-muted">未选择文件</span>
             <input type="file" id="avatarUpload" accept="image/*" style="display: none" />
-            <button class="btn btn-outline-primary" type="button" id="customAvatarUploadBtn">
-              <i class="fas fa-folder-open"></i>
-              选择头像
-            </button>
+            <button class="btn btn-outline-primary" type="button" id="customAvatarUploadBtn"><i class="fas fa-folder-open me-2"></i>选择头像</button>
           </div>
           <div class="form-text">
             <i class="fas fa-info-circle me-1"></i>
