--- a/templates/modals/editCategoryModal.html
+++ b/templates/modals/editCategoryModal.html
@@ -1,9 +1,9 @@
 <!-- 编辑分类模态框 -->
-<div class="modal fade" id="editCategoryModal" tabindex="-1" aria-labelledby="editCategoryModalLabel" aria-hidden="true">
+<div class="modal fade" id="editCategoryModal" tabindex="-1">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title"><i class="fas fa-edit"></i> 编辑导航分类</h5>
+        <h5 class="modal-title"><i class="fas fa-edit me-2"></i>编辑导航分类</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
       </div>
       <!-- 模态框主体 -->
@@ -29,7 +29,7 @@
       <!-- 模态框底部 -->
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">取消</button>
-        <button type="button" class="btn btn-success" id="updateCategoryBtn"><i class="fas fa-save"></i> 更新</button>
+        <button type="button" class="btn btn-success" id="updateCategoryBtn"><i class="fas fa-save me-1"></i>更新</button>
       </div>
     </div>
   </div>
