--- a/templates/modals/manageNavigationModal.html
+++ b/templates/modals/manageNavigationModal.html
@@ -1,14 +1,15 @@
 <!-- 导航管理模态框 -->
-<div class="modal fade" id="navigationManageModal" tabindex="-1" aria-labelledby="navigationManageModalLabel" aria-hidden="true">
+<div class="modal fade" id="navigationManageModal" tabindex="-1">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="navigationManageModalLabel"><i class="fas fa-cog me-2"></i> 导航管理</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        <h5 class="modal-title"><i class="fas fa-cog me-2"></i>导航管理</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
       </div>
+      <!-- 模态框主体 -->
       <div class="modal-body">
         <!-- 隐藏的导航项 -->
-        <div class="tab-pane fade show active" id="hidden-items" role="tabpanel" aria-labelledby="hidden-items-tab">
+        <div class="tab-pane fade show active" id="hidden-items">
           <div class="mt-3">
             <div class="d-flex justify-content-between align-items-center mb-3">
               <h6 class="mb-0">隐藏的导航项</h6>
@@ -42,8 +43,9 @@
           </div>
         </div>
       </div>
+      <!-- 模态框底部 -->
       <div class="modal-footer">
-        <button type="button" class="btn btn-success" data-bs-dismiss="modal"><i class="fas fa-save me-1"></i>完成</button>
+        <button type="button" class="btn btn-success" data-bs-dismiss="modal"><i class="fas fa-check me-1"></i>完成</button>
       </div>
     </div>
   </div>
