--- a/templates/modals/manageUserModal.html
+++ b/templates/modals/manageUserModal.html
@@ -3,12 +3,14 @@
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title"><i class="fas fa-user"></i> 用户详情</h5>
-        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" style="background-color: var(--github-accent);"></button>
+        <h5 class="modal-title"><i class="fas fa-user me-2"></i>用户详情</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
       </div>
+      <!-- 模态框主体 -->
       <div class="modal-body" id="userDetailsContent">
         <!-- 用户详情内容将通过 JavaScript 动态加载 -->
       </div>
+      <!-- 模态框底部 -->
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">关闭</button>
       </div>
