--- a/templates/profile.html
+++ b/templates/profile.html
@@ -225,7 +225,7 @@
   </div>
 
   <!-- 引入模态框 -->
-  {% include 'modals/addProjectProfileModal.html' %}
+  {% include 'modals/addProjectModal.html' %}
   {% include 'modals/editAvatarModal.html' %}
   <!-- - -->
 {% endblock %}
