--- a/static/css/form.css
+++ b/static/css/form.css
@@ -33,6 +33,7 @@
 }
 
 .form-select {
+    width: 60%;
     background-color: var(--github-bg);
     border: 1px solid var(--github-border);
     color: var(--github-text);
