--- a/templates/admin/navigation.html
+++ b/templates/admin/navigation.html
@@ -94,18 +94,18 @@
                 <table class="table table-hover category-table" data-category-id="{{ category.id }}">
                   <thead>
                     <tr>
-                      <th>导航信息</th>
-                      <th>URL</th>
-                      <th>状态</th>
-                      <th>创建者</th>
-                      <th>操作</th>
+                      <th style="width: 25%; min-width: 10em;">导航信息</th>
+                      <th style="width: 25%; min-width: 10em;">URL</th>
+                      <th style="width: 25%; min-width: 10em;">创建者</th>
+                      <th style="width: 5%;  min-width: 4em;">状态</th>
+                      <th style="width: 20%; min-width: 4em;">操作</th>
                     </tr>
                   </thead>
                   <tbody>
                     {% for item in category.nav_items|sort(attribute='order') %}
                       <tr data-nav-item-id="{{ item.id }}">
                         <!-- 导航信息 -->
-                        <td style="width: 25%;">
+                        <td>
                           <div class="d-flex align-items-center">
                             <div class="me-3">
                               <i class="{{ item.icon or 'fas fa-link' }}" id="link-icon"></i>
@@ -119,14 +119,14 @@
                           </div>
                         </td>
                         <!-- 指向 -->
-                        <td style="width: 25%;">
+                        <td>
                           <a href="{{ item.url }}" target="_blank" class="text-decoration-none">
                             {{ item.url[:30] }} {% if item.url|length > 30 %}...{% endif %}
                             <i class="fas fa-external-link-alt ms-1"></i>
                           </a>
                         </td>
                         <!-- 创建者 -->
-                        <td style="width: 25%;">
+                        <td>
                           {% if item.creator %}
                             <div class="d-flex align-items-center">
                               <a class="nav-link" id="profile_link" href="{{ url_for('auth.profile') }}">
