--- a/templates/admin/users.html
+++ b/templates/admin/users.html
@@ -111,12 +111,12 @@
             <table class="table table-hover" id="usersTable">
               <thead>
                 <tr>
-                  <th>用户信息</th>
-                  <th>角色</th>
-                  <th>注册时间</th>
-                  <th>状态</th>
-                  <th>项目数</th>
-                  <th>操作</th>
+                  <th style="width: 25%; min-width: 14em;">用户信息</th>
+                  <th style="width: 25%; min-width: 14em;">角色</th>
+                  <th style="width: 25%; min-width: 10em;">注册时间</th>
+                  <th style="width: 5%;  min-width: 4em;">状态</th>
+                  <th style="width: 8%;  min-width: 6em;">项目数</th>
+                  <th style="width: 12%; min-width: 10em;">操作</th>
                 </tr>
               </thead>
               <tbody>
@@ -204,7 +204,7 @@
                       {% endif %}
                     </td>
                     <!-- 注册时间 -->
-                    <td>{{ user.created_at.strftime('%Y-%m-%d') }}</td>
+                    <td>{{ user.created_at.strftime('%Y-%m-%d %H:%M:%S') }}</td>
                     <!-- 状态 -->
                     <td>
                       {% if user.is_active %}
