--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -19,7 +19,7 @@
     <div class="row mb-4">
       <div class="col-12">
         <div class="d-flex justify-content-between align-items-center mb-4">
-          <h2><i class="fas fa-compass"></i> 工作室导航</h2>
+          <h2><i class="fas fa-compass"></i> 导航站</h2>
           {% if current_user %}
             <div>
               <button class="btn btn-outline-primary me-2" data-bs-toggle="modal" data-bs-target="#addNavItemModal"><i class="fas fa-plus"></i> 添加新项</button>
