--- a/templates/project_docs_list.html
+++ b/templates/project_docs_list.html
@@ -85,10 +85,10 @@
                 <table class="table table-hover">
                   <thead>
                     <tr>
-                      <th>文档名称</th>
-                      <th>修改时间</th>
-                      <th>类型</th>
-                      <th>操作</th>
+                      <th style="width: 25%;">文档名称</th>
+                      <th style="width: 35%;">修改时间</th>
+                      <th style="width: 20%;">类型</th>
+                      <th style="width: 20%;">操作</th>
                     </tr>
                   </thead>
                   <tbody class="doc-list-container">
