feat(ui): 更新用户界面样式和功能
- 添加关闭按钮的SVG图标文件
- 修改表单选择框和角色选择框的宽度样式
- 更新按钮样式使用本地SVG文件替代内联数据
- 清理用户数据图片文件

--- a/templates/admin/users.html
+++ b/templates/admin/users.html
@@ -43,6 +43,10 @@
     .user_dot_inline {
       display: inline-block;
     }
+    
+    .role-cell select {
+      width: 60%;
+    }
   </style>
 {% endblock %}
 
@@ -154,7 +158,7 @@
                       </div>
                     </td>
                     <!-- 角色 -->
-                    <td>
+                    <td class="role-cell">
                       {% if user.id == current_user.id %}
                         <select class="form-select form-select-sm role-select" data-user-id="{{ user.id }}" disabled>
                           {% if user.role == 0 %}
