--- a/templates/index.html
+++ b/templates/index.html
@@ -98,7 +98,7 @@
                     <div class="d-flex justify-content-between align-items-center">
                       <!-- 项目作者 -->
                       <div class="d-flex align-items-center">
-                        <a class="nav-link" id="profile_link" href="#">
+                        <a class="nav-link" id="profile_link" href="{{ url_for('auth.profile', username=project.author.username) }}">
                           <!-- TODO:查看他人主页 -->
                           <div id="user_tag" class="me-1">
                             {% if project.author and project.author.avatar_path %}
