feat(图片处理): 增强图片缓存功能并支持本地文件URI
扩展图片缓存功能以支持本地文件URI(file://)和网络URL
添加图片删除功能以清理旧缓存
统一处理图片预览和更新逻辑
修改输入框提示信息以反映支持的URI类型

--- a/templates/admin/studio_info.html
+++ b/templates/admin/studio_info.html
@@ -114,7 +114,7 @@
                 <label for="studioLogo" class="form-label fw-bold">Logo URL</label>
                 <div class="input-group">
                   <span class="input-group-text bg-dark"><i class="fas fa-image"></i></span>
-                  <input type="url" class="form-control" id="studioLogo" name="logo_url" value="{{ studio_info.logo_url }}" />
+                  <input type="url" class="form-control" id="studioLogo" name="logo_url" value="{{ studio_info.logo_url }}" placeholder="https://... 或 file://..." />
                 </div>
               </div>
 
