--- a/templates/modals/editProjectModal.html
+++ b/templates/modals/editProjectModal.html
@@ -27,7 +27,7 @@
             </div>
             <div class="mb-3">
               <label for="editProjectImage" class="form-label">项目图片链接</label>
-              <input type="url" class="form-control" id="editProjectImage" name="image_url" placeholder="https://..." />
+              <input type="url" class="form-control" id="editProjectImage" name="image_url" placeholder="https://... 或 file://..." />
             </div>
             <div class="mb-3 form-check">
               <input type="checkbox" class="form-check-input" id="editProjectFeatured" name="is_featured" />
