--- a/templates/modals/addProjectModal.html
+++ b/templates/modals/addProjectModal.html
@@ -27,7 +27,7 @@
           </div>
           <div class="mb-3">
             <label for="projectImage" class="form-label">项目图片链接</label>
-            <input type="url" class="form-control" id="projectImage" placeholder="https://..." />
+            <input type="url" class="form-control" id="projectImage" placeholder="https://... 或 file://..." />
           </div>
         </form>
       </div>
