feat: 实现项目编辑和删除功能
- 在项目页面添加编辑和删除按钮
- 创建项目编辑模态框
- 添加后端API处理项目更新和删除请求
- 更新前端JS处理编辑表单提交和删除操作
- 分离管理员和普通用户的编辑模态框模板

--- a/templates/admin/projects.html
+++ b/templates/admin/projects.html
@@ -201,7 +201,7 @@
 
   <!-- 引入模态框 -->
   {% include 'modals/addProjectAdminModal.html' %}
-  {% include 'modals/editProjectModal.html' %}
+  {% include 'modals/editProjectAdminModal.html' %}
   <!-- - -->
 {% endblock %}
 
