--- a/templates/modals/addNavItemModal.html
+++ b/templates/modals/addNavItemModal.html
@@ -65,7 +65,7 @@
 
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">取消</button>
-          <button type="button" class="btn btn-primary" id="saveNavItemBtn"><i class="fas fa-save me-1"></i>保存</button>
+          <button type="button" class="btn btn-success" id="saveNavItemBtn"><i class="fas fa-save me-1"></i>保存</button>
         </div>
       </form>
     </div>
