--- a/templates/modals/editDocModal.html
+++ b/templates/modals/editDocModal.html
@@ -26,7 +26,7 @@
       <!-- 模态框底部 -->
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">取消</button>
-        <button type="button" class="btn btn-primary" id="saveDocBtn"><i class="fas fa-save me-1"></i>保存</button>
+        <button type="button" class="btn btn-success" id="saveDocBtn"><i class="fas fa-save me-1"></i>保存</button>
       </div>
     </div>
   </div>
