--- a/templates/modals/editNavItemModal.html
+++ b/templates/modals/editNavItemModal.html
@@ -67,7 +67,7 @@
         <!-- 模态框底部 -->
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">取消</button>
-          <button type="button" class="btn btn-primary" id="updateNavItemBtn"><i class="fas fa-save me-1"></i>保存更改</button>
+          <button type="button" class="btn btn-success" id="updateNavItemBtn"><i class="fas fa-save me-1"></i>保存更改</button>
         </div>
       </form>
     </div>
