--- a/templates/modals/addProjectModal.html
+++ b/templates/modals/addProjectModal.html
@@ -46,10 +46,10 @@
         <label for="projectImage" class="form-label">
           项目图片链接
         </label>
-        <input type="url"
+        <input type="text"
           class="form-control"
             id="projectImage"
-               placeholder="https://... 或 file://..." />
+               placeholder="https://... 或 file://... 或 index.*" />
       </div>
     </form>
   </div>
