--- a/templates/modals/editProjectAdminModal.html
+++ b/templates/modals/editProjectAdminModal.html
@@ -56,11 +56,11 @@
           <label for="editProjectImage" class="form-label">
             项目图片链接
           </label>
-          <input type="url"
+          <input type="text"
             class="form-control"
               id="editProjectImage"
                 name="image_url"
-                 placeholder="https://... 或 file://..." />
+                 placeholder="https://... 或 file://... 或 index.*" />
         </div>
         <div class="mb-3 form-check">
           <input type="checkbox"
